Add support for oneagent operator imagePullSecrets
This adds support for defining a list of imagePullSecrets that can
be conditionally templated into the deployment-operator.yaml and
deployment-webhook.yaml templates in the oneagent operator helm
charts

Signed-off-by: Steven Wilkerson <steven.wilkerson@jbhunt.com>

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-operator.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-operator.yaml
@@ -99,6 +99,12 @@ spec:
                     values:
                       - linux
       serviceAccountName: {{ .Values.operatorServiceAccount }}
+      {{- if .Values.operator.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.operator.imagePullSecrets }}
+        - name: {{ . }}
+      {{- end}}
+      {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
       {{- end }}
