--- a/dynatrace-oneagent-operator/templates/Common/deployment-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/deployment-operator.yaml
@@ -100,6 +100,12 @@ spec:
                     values:
                       - linux
       serviceAccountName: {{ .Release.Name }}
+      {{- if .Values.operator.imagePullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.operator.imagePullSecrets }}
+        - name: {{ . }}
+      {{- end}}
+      {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
       {{- end }}
