Fix trustedCA field in dynakube

--- a/dynatrace-operator/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/templates/Common/customresource-dynakube.yaml
@@ -34,7 +34,7 @@ spec:
   {{- end }}
 
   {{- if .Values.trustedCAs }}
-  trustedCAs: {{ .Values.trustedCAs }}
+  trustedCAs: {{ .Values.name }}
   {{- end }}
 
   {{- if .Values.networkZone }}
