--- a/dynatrace-operator/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/templates/Common/customresource-dynakube.yaml
@@ -41,6 +41,10 @@ spec:
   networkZone: {{ .Values.networkZone }}
   {{- end }}
 
+  {{- if .Values.customPullSecret }}
+  customPullSecret: {{ .Values.customPullSecret }}
+  {{- end }}
+
   activeGate:
     {{- if .Values.activeGate.image}}
     image: {{ .Values.activeGate.image }}
