--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -2855,7 +2855,7 @@ data:
 
       {{- if .Values.proxy }}
       proxy:
-        valueFrom: {{ .Values.proxy }}
+        valueFrom: {{ .Values.name }}
       {{- end }}
 
       {{- if .Values.trustedCAs }}
