--- a/dynatrace-operator/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/templates/Common/customresource-dynakube.yaml
@@ -30,11 +30,11 @@ spec:
 
   {{- if .Values.proxy }}
   proxy:
-    valueFrom: {{ .Values.proxy }}
+    valueFrom: {{ .Values.name }}
   {{- end }}
 
   {{- if .Values.trustedCAs }}
-  trustedCAs: {{ .Values.trustedCAs }}
+  trustedCAs: {{ .Values.name }}
   {{- end }}
 
   {{- if .Values.networkZone }}
