--- a/dynatrace-operator/templates/Common/webhook/deployment-webhook.yaml
+++ b/dynatrace-operator/templates/Common/webhook/deployment-webhook.yaml
@@ -148,6 +148,10 @@ spec:
             - name: certs-volume
               mountPath: /mnt/webhook-certs
       serviceAccountName: dynatrace-webhook
+      {{- if .Values.operator.imagePullSecret }}
+      imagePullSecrets:
+        - name: {{ .Values.operator.imagePullSecret }}
+      {{- end }}
       volumes:
         - name: certs-volume
           emptyDir: {}
