--- a/dynatrace-operator/tests/Openshift/operator/deployment-operator_test.yaml
+++ b/dynatrace-operator/tests/Openshift/operator/deployment-operator_test.yaml
@@ -118,7 +118,6 @@ tests:
       - isNull:
           path: spec.template.spec.nodeSelector
 
-
   - it: should have tolerations if set
     set:
       platform: openshift
@@ -140,3 +139,19 @@ tests:
           path: spec.template.spec.nodeSelector
           value:
             test-key: test-value
+
+  - it: should have imagePullSecrets defined in spec
+    set: 
+      platform: openshift
+      operator.imagePullSecret: pull-secret
+    asserts:
+      - equal:
+          path: spec.template.spec.imagePullSecrets[0].name
+          value: pull-secret
+
+  - it: should not have imagePullSecrets defined in spec
+    set: 
+      platform: openshift
+    asserts:
+      - isNull:
+          path: spec.template.spec.imagePullSecrets
