Update image pull secret field in oao and oao-marketplace to only use one pull secret

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
@@ -16,8 +16,7 @@ mode: "fullstack"
 
 operator:
   image: ""
-  # The expected format is a list of imagePullSecret names
-  imagePullSecrets: []
+  imagePullSecret: ""
 
 oneagent:
   name: "oneagent"
