--- a/dynatrace-oneagent-operator/templates/Common/deployment-webhook.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/deployment-webhook.yaml
@@ -148,11 +148,9 @@ spec:
             - name: certs-volume
               mountPath: /mnt/webhook-certs
       serviceAccountName: dynatrace-oneagent-webhook
-      {{- if .Values.operator.imagePullSecrets }}
+      {{- if .Values.operator.imagePullSecret }}
       imagePullSecrets:
-      {{- range .Values.operator.imagePullSecrets }}
-        - name: {{ . }}
-      {{- end}}
+        - name: {{ .Values.operator.imagePullSecret }}
       {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
