--- a/dynatrace-oneagent-operator/tests/operator_image_secret_test.yaml
+++ b/dynatrace-oneagent-operator/tests/operator_image_secret_test.yaml
@@ -5,8 +5,7 @@ tests:
   - it: should have imagePullSecrets defined in spec
     set:
       operator:
-        imagePullSecrets:
-        - myTestSecret
+        imagePullSecret: myTestSecret
     asserts:
       - isKind:
           of: Deployment
