--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-operator.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-operator.yaml
@@ -99,11 +99,9 @@ spec:
                     values:
                       - linux
       serviceAccountName: {{ .Values.operatorServiceAccount }}
-      {{- if .Values.operator.imagePullSecrets }}
+      {{- if .Values.operator.imagePullSecret }}
       imagePullSecrets:
-      {{- range .Values.operator.imagePullSecrets }}
-        - name: {{ . }}
-      {{- end}}
+        - name: {{ .Values.operator.imagePullSecret }}
       {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
