--- a/dynatrace-oneagent-operator/templates/Common/deployment-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/deployment-operator.yaml
@@ -100,11 +100,9 @@ spec:
                     values:
                       - linux
       serviceAccountName: {{ .Release.Name }}
-      {{- if .Values.operator.imagePullSecrets }}
+      {{- if .Values.operator.imagePullSecret }}
       imagePullSecrets:
-      {{- range .Values.operator.imagePullSecrets }}
-        - name: {{ . }}
-      {{- end}}
+        - name: {{ .Values.operator.imagePullSecret }}
       {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
