--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -20,8 +20,7 @@ createPodSecurityPolicies: true
 
 operator:
   image: ""
-  # The expected format is a list of imagePullSecret names
-  imagePullSecrets: []
+  imagePullSecret: ""
   # The expected format is YAML and not a string
   nodeSelector: ""
   # The expected format is YAML and not a string
