Chang name of imagePullSecret field to customPullSecret

--- a/dynatrace-oneagent-operator/tests/operator_image_secret_test.yaml
+++ b/dynatrace-oneagent-operator/tests/operator_image_secret_test.yaml
@@ -5,7 +5,7 @@ tests:
   - it: should have imagePullSecrets defined in spec
     set:
       operator:
-        imagePullSecret: myTestSecret
+        customPullSecret: myTestSecret
     asserts:
       - isKind:
           of: Deployment
