--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-webhook.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-webhook.yaml
@@ -147,9 +147,9 @@ spec:
             - name: certs-volume
               mountPath: /mnt/webhook-certs
       serviceAccountName: {{ .Values.webhookServiceAccount }}
-      {{- if .Values.operator.imagePullSecret }}
+      {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
-        - name: {{ .Values.operator.imagePullSecret }}
+        - name: {{ .Values.operator.customPullSecret }}
       {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
