--- a/dynatrace-oneagent-operator/templates/Common/deployment-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/deployment-operator.yaml
@@ -100,9 +100,9 @@ spec:
                     values:
                       - linux
       serviceAccountName: {{ .Release.Name }}
-      {{- if .Values.operator.imagePullSecret }}
+      {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
-        - name: {{ .Values.operator.imagePullSecret }}
+        - name: {{ .Values.operator.customPullSecret }}
       {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
