--- a/dynatrace-oneagent-operator/templates/Common/deployment-webhook.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/deployment-webhook.yaml
@@ -148,9 +148,9 @@ spec:
             - name: certs-volume
               mountPath: /mnt/webhook-certs
       serviceAccountName: dynatrace-oneagent-webhook
-      {{- if .Values.operator.imagePullSecret }}
+      {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
-        - name: {{ .Values.operator.imagePullSecret }}
+        - name: {{ .Values.operator.customPullSecret }}
       {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
