--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/Common/deployment-webhook.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/Common/deployment-webhook.yaml
@@ -147,9 +147,9 @@ spec:
             - name: certs-volume
               mountPath: /mnt/webhook-certs
       serviceAccountName: {{ .Values.webhookServiceAccount }}
-      {{- if .Values.operator.imagePullSecret }}
+      {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
-        - name: {{ .Values.operator.imagePullSecret }}
+        - name: {{ .Values.operator.customPullSecret }}
       {{- end }}
       volumes:
         - name: certs-volume
