--- a/dynatrace-operator/templates/Common/webhook/deployment-webhook.yaml
+++ b/dynatrace-operator/templates/Common/webhook/deployment-webhook.yaml
@@ -148,9 +148,9 @@ spec:
             - name: certs-volume
               mountPath: /mnt/webhook-certs
       serviceAccountName: dynatrace-webhook
-      {{- if .Values.operator.imagePullSecret }}
+      {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
-        - name: {{ .Values.operator.imagePullSecret }}
+        - name: {{ .Values.operator.customPullSecret }}
       {{- end }}
       volumes:
         - name: certs-volume
