--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -2592,6 +2592,10 @@ data:
       networkZone: {{ .Values.networkZone }}
       {{- end }}
 
+      {{- if .Values.customPullSecret }}
+      customPullSecret: {{ .Values.customPullSecret }}
+      {{- end }}
+
       activeGate:
         {{- if .Values.activeGate.image}}
         image: {{ .Values.activeGate.image }}
