Add support for oneagent operator imagePullSecrets (#98)
Add `operator.customPullSecret` value field. This will be used for the operator and webhook pod.

--- a/dynatrace-oneagent-operator/templates/Common/deployment-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/deployment-operator.yaml
@@ -100,6 +100,10 @@ spec:
                     values:
                       - linux
       serviceAccountName: {{ .Release.Name }}
+      {{- if .Values.operator.customPullSecret }}
+      imagePullSecrets:
+        - name: {{ .Values.operator.customPullSecret }}
+      {{- end }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
       {{- end }}
