--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -20,6 +20,7 @@ createPodSecurityPolicies: true
 
 operator:
   image: ""
+  customPullSecret: ""
   # The expected format is YAML and not a string
   nodeSelector: ""
   # The expected format is YAML and not a string
