--- a/dynatrace-operator/questions.yml
+++ b/dynatrace-operator/questions.yml
@@ -56,6 +56,13 @@ questions:
     type: string
     group: "Global Configuration"
 
+  - variable: enableIstio
+    label: "Define if istio support should be enabled"
+    description: "Optional: when enabled, and if Istio is installed on the Kubernetes environment, then the Operator will create the corresponding VirtualService and ServiceEntry objects to allow access to the Dynatrace cluster from the agent or the activeGate."
+    default: false
+    type: boolean
+    group: "Global Configuration"
+
   - variable: customPullSecret
     label: "Define a custom pull secret"
     description: "Optional: Defines a custom pull secret in case you use a private registry when pulling images from the Dynatrace environment"
@@ -70,9 +77,23 @@ questions:
     type: string
     group: "Global Configuration"
 
-  - variable: activegate.image
+  - variable: operator.customPullSecret
+    label: "Set a custom pull secret for operator image"
+    description: "Optional: Set a custom pull secret for the operator image"
+    default: ""
+    type: string
+    group: "Global Configuration"
+
+  - variable: activeGate.image
     label: "Set custom image for the ActiveGate"
     description: "Optional: Set a custom image for the ActiveGate. Defaults to ENVIRONMENTID.live.dynatrace.com/linux/activegate"
+    default: ""
+    type: string
+    group: "Global Configuration"
+
+  - variable: oneAgent.image
+    label: "Set custom image for the OneAgent"
+    description: "Optional: Set a custom image for the OneAgent."
     default: ""
     type: string
     group: "Global Configuration"
@@ -88,7 +109,7 @@ questions:
     show_subquestion_if: true
     subquestions:
       - variable: codeModules.volume
-        label: "Volume from where to get the OneAgent binary from"
+        label: "Optional: Volume from where to get the OneAgent binary from"
         description: |
           Define a volume the OneAgent binary will be taken from.
           Two options are currently supported.
@@ -96,9 +117,11 @@ questions:
           When using an emptyDir, the previous approach using init containers and wget will be used.
           - Please edit as Yaml for the best experience
         type: string
-      - variable: codeModules.selector
-        label: "Selector to define namespaces to monitor"
-        description: "Defines a Kubernetes Label Selector which is used to decide which namespaces are monitored - Please edit as Yaml for the best experience"
+      - variable: codeModules.resources
+        label: "Optional: resource settings for injected OneAgent init-container"
+        description: |
+          Optional: resource settings for injected OneAgent init-container. 
+          - Please edit as Yaml for the best experience
         type: string
 
   #################### Infra Monitoring (OPTIONAL) ####################
@@ -119,6 +142,13 @@ questions:
         label: "Custom tolerations for the OneAgent"
         description: "Defines custom tolerations to the OneAgent - Please edit as Yaml for the best experience - see https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/"
         default: ""
+        type: string
+      - variable: infraMonitoring.resources
+        label: "resource settings for inframonitoring pods"
+        description: |
+          Optional: resource settings for OneAgent container. 
+          Consumption of the OneAgent heavily depends on the workload to monitor - adjust values accordingly.
+          - Please edit as Yaml for the best experience
         type: string
       - variable: infraMonitoring.args
         label: "Arguments to OneAgent installer"
