--- a/dynatrace-operator/tests/Common/customresource-modules/customresource-dynakube_codemodules_test.yaml
+++ b/dynatrace-operator/tests/Common/customresource-modules/customresource-dynakube_codemodules_test.yaml
@@ -24,7 +24,7 @@ tests:
           path: spec.codeModules.enabled
           value: true
 
-  - it: should set nodeSelectors
+  - it: should set resources
     set:
       apiUrl: test-api-url
       apiToken: test-api-token
@@ -91,36 +91,4 @@ tests:
           path: spec.codeModules.volume.hostPath.type
           value: Directory
 
-  - it: should set selectors
-    set:
-      apiUrl: test-api-url
-      apiToken: test-api-token
-      paasToken: test-paas-token
-      codeModules:
-        enabled: true
-        selector:
-          matchLabels:
-            inject: "true"
-          matchExpressions:
-            - key: app
-              operator: In
-              values: [ "test" ]
-    asserts:
-      - isNotNull:
-          path: spec.codeModules.selector
-      - isNotNull:
-          path: spec.codeModules.selector.matchLabels
-      - isNotNull:
-          path: spec.codeModules.selector.matchLabels.inject
-      - isNotNull:
-          path: spec.codeModules.selector.matchExpressions
-      - equal:
-          path: spec.codeModules.selector.matchLabels.inject
-          value: "true"
-      - contains:
-          path: spec.codeModules.selector.matchExpressions
-          content:
-            key: app
-            operator: In
-            values: ["test"]
 
