--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/values.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/values.yaml
@@ -37,7 +37,6 @@ operator:
 
 activeGate:
   image: ""
-  autoUpdate: true
 
 oneAgent:
   version: ""
@@ -48,13 +47,11 @@ codeModules:
   enabled: true
   resources: { }
   volume: { }
-  selector: { }
 
 infraMonitoring:
   enabled: true
   nodeSelector: { }
   tolerations: []
-  waitReadySeconds: 300
   resources: { }
   args: []
   env: []
@@ -64,12 +61,16 @@ infraMonitoring:
   labels: { }
   useUnprivilegedMode: true
   useImmutableImage: false
+  readOnly:
+    enabled: false
+    installationVolume: {}
+    userId: ""
+    groupId: ""
 
 classicFullStack:
   enabled: true
   nodeSelector: { }
   tolerations: [ ]
-  waitReadySeconds: 300
   resources: { }
   args: []
   env: []
@@ -79,6 +80,11 @@ classicFullStack:
   labels: { }
   useUnprivilegedMode: true
   useImmutableImage: false
+  readOnly:
+    enabled: false
+    installationVolume: {}
+    userId: ""
+    groupId: ""
 
 kubernetesMonitoring:
   enabled: true
