--- a/dynatrace-operator/templates/Openshift/webhook/role-webhook.yaml
+++ b/dynatrace-operator/templates/Openshift/webhook/role-webhook.yaml
@@ -13,19 +13,56 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq .Values.platform "kubernetes" }}
-kind: Role
+{{- if eq .Values.platform "openshift" }}
 apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
 metadata:
-  name: dynatrace-dynakube-oneagent-unprivileged
+  name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "dynatrace-operator.commonlabelswebhook" . | nindent 4 }}
 rules:
   - apiGroups:
-      - policy
+      - ""
     resources:
-      - podsecuritypolicies
-    resourceNames:
-      - dynatrace-dynakube-oneagent-unprivileged
+      - services
+      - configmaps
+      - secrets
     verbs:
-      - use
+      - get
+      - list
+      - watch
+      - create
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - dynatrace.com
+    resources:
+      - dynakubes
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - list
+      - create
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - get
+      - update
+      - create
 {{ end }}
