Update dto files to match operator repo

--- a/dynatrace-operator/templates/Common/kubernetes-monitoring/clusterrole-kubernetes-monitoring.yaml
+++ b/dynatrace-operator/templates/Common/kubernetes-monitoring/clusterrole-kubernetes-monitoring.yaml
@@ -49,6 +49,9 @@ rules:
       - watch
       - get
   - nonResourceURLs:
-      - /metrics
+      - /metrics     
+      - /version
+      - /readyz
+      - /healthz
     verbs:
       - get
