--- a/dynatrace-operator/templates/Common/operator/role-operator.yaml
+++ b/dynatrace-operator/templates/Common/operator/role-operator.yaml
@@ -38,6 +38,7 @@ rules:
       - dynakubes/status
     verbs:
       - update
+
   - apiGroups:
       - apps
     resources:
@@ -75,8 +76,9 @@ rules:
       - deployments/finalizers
     verbs:
       - update
+
   - apiGroups:
-      - ""
+      - "" # "" indicates the core API group
     resources:
       - configmaps
     verbs:
@@ -87,7 +89,7 @@ rules:
       - update
       - delete
   - apiGroups:
-      - ""
+      - "" # "" indicates the core API group
     resources:
       - pods
     verbs:
@@ -97,7 +99,7 @@ rules:
       - delete
       - create
   - apiGroups:
-      - ""
+      - "" # "" indicates the core API group
     resources:
       - secrets
     verbs:
@@ -119,11 +121,11 @@ rules:
       - services
     verbs:
       - create
-      - list
-      - get
       - delete
-      - update
+      - get
+      - list
       - watch
+
   - apiGroups:
       - monitoring.coreos.com
     resources:
@@ -131,6 +133,7 @@ rules:
     verbs:
       - get
       - create
+
   - apiGroups:
       - networking.istio.io
     resources:
@@ -142,6 +145,7 @@ rules:
       - create
       - update
       - delete
+
   - apiGroups:
       - coordination.k8s.io
     resources:
@@ -150,11 +154,3 @@ rules:
       - get
       - update
       - create
-  - apiGroups:
-      - policy
-    resources:
-      - podsecuritypolicies
-    resourceNames:
-      - dynatrace-operator
-    verbs:
-      - use
