--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/Common/deployment-webhook.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/Common/deployment-webhook.yaml
@@ -30,6 +30,8 @@ spec:
     type: Recreate
   template:
     metadata:
+      annotations:
+        kubectl.kubernetes.io/default-logs-container: webhook
       labels:
         dynatrace.com/operator: oneagent
         internal.dynatrace.com/component: webhook
@@ -81,13 +83,6 @@ spec:
               scheme: HTTPS
             initialDelaySeconds: 60
             periodSeconds: 10
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: server-port
-              scheme: HTTPS
-            initialDelaySeconds: 60
-            periodSeconds: 10
           ports:
             - name: metrics
               containerPort: 8383
@@ -95,19 +90,13 @@ spec:
               containerPort: 8443
           resources:
             requests:
-              cpu: 10m
-              memory: 64Mi
+              cpu: 300m
+              memory: 128Mi
             limits:
-              cpu: 100m
+              cpu: 600m
               memory: 256Mi
-          volumeMounts:
-            - name: certs-volume
-              mountPath: /mnt/webhook-certs
       serviceAccountName: {{ .Values.webhookServiceAccount }}
       {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
         - name: {{ .Values.operator.customPullSecret }}
       {{- end }}
-      volumes:
-        - name: certs-volume
-          emptyDir: {}
