Adapt tests accordingly

--- a/dynatrace-operator/tests/Common/kubernetes-monitoring/clusterrole-kubernetes-monitoring_test.yaml
+++ b/dynatrace-operator/tests/Common/kubernetes-monitoring/clusterrole-kubernetes-monitoring_test.yaml
@@ -49,6 +49,9 @@ tests:
           content:
               nonResourceURLs:
                 - /metrics
+                - /version
+                - /readyz
+                - /healthz
               verbs:
                 - get
 
