--- a/dynatrace-operator/tests/Common/webhook/clusterrole-webhook_test.yaml
+++ b/dynatrace-operator/tests/Common/webhook/clusterrole-webhook_test.yaml
@@ -28,22 +28,9 @@ tests:
           path: rules
           content:
             apiGroups:
-              - admissionregistration.k8s.io
+              - ""
             resources:
-              - mutatingwebhookconfigurations
+              - events
             verbs:
-              - list
               - create
-              - watch
-      - contains:
-          path: rules
-          content:
-            apiGroups:
-              - admissionregistration.k8s.io
-            resources:
-              - mutatingwebhookconfigurations
-            resourceNames:
-              - dynatrace-webhook
-            verbs:
-              - get
-              - update
+              - patch
