--- a/dynatrace-operator/tests/Common/webhook/mutatingwebhookconfiguration_test.yaml
+++ b/dynatrace-operator/tests/Common/webhook/mutatingwebhookconfiguration_test.yaml
@@ -15,6 +15,7 @@ tests:
           path: webhooks
           value:
             - name: webhook.dynatrace.com
+              reinvocationPolicy: IfNeeded
               rules:
                 - apiGroups: [ "" ]
                   apiVersions: [ "v1" ]
@@ -30,4 +31,5 @@ tests:
                   name: dynatrace-webhook
                   namespace: NAMESPACE
                   path: /inject
-              admissionReviewVersions: [ "v1beta1" ]
+              admissionReviewVersions: [ "v1beta1", "v1" ]
+              sideEffects: None
