Fixes according to reviews

--- a/dynatrace-operator/values.yaml
+++ b/dynatrace-operator/values.yaml
@@ -25,9 +25,6 @@ trustedCAs: ""
 networkZone: ""
 enableIstio: false
 
-### Only applicable for Openshift
-createSecurityContextConstraints: true
-
 autoCreateSecret: true
 apiToken: ""
 paasToken: ""
@@ -36,6 +33,8 @@ operator:
   image: ""
   nodeSelector: {}
   tolerations: {}
+
+createSecurityContextConstraints: true # Only applicable for Openshift
 
 ### module properties
 
