--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -21,7 +21,7 @@ metadata:
   {{- include "dynatrace-operator.labels" . | nindent 4 }}
 data:
   mutatingWebhookConfiguration.yaml: |
-    apiVersion: admissionregistration.k8s.io/v1beta1
+    apiVersion: admissionregistration.k8s.io/v1
     kind: MutatingWebhookConfiguration
     metadata:
       name: dynatrace-webhook
