--- a/dynatrace-operator/templates/Common/webhook/mutatingwebhookconfiguration.yaml
+++ b/dynatrace-operator/templates/Common/webhook/mutatingwebhookconfiguration.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
   {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: dynatrace-webhook
