--- a/dynatrace-operator/templates/Openshift-3.11/oneagent/securitycontextconstraints.yaml
+++ b/dynatrace-operator/templates/Openshift-3.11/oneagent/securitycontextconstraints.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
 {{- if and (eq .Values.platform "openshift-3-11") (.Values.createPodSecurityPolicies) }}
 apiVersion: security.openshift.io/v1
 kind: SecurityContextConstraints
